Updated the way a new instance of 'mainClass' was created in the ConsoleProgram.java file. Removed unused variable in MyProgram.java so that VSCode would not show it as a problem.